Fix bug: New sponsors not showing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -628,6 +628,7 @@ p {
 .sponsor__image {
   width: auto;
   max-width: 100%;
+  max-height: 95vh;
 }
 
 /*
